# Mouth2midi

./: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android.yml
android/: variables.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  beat_detector.cpp  beat_detector.h  native-lib.cpp  note_tracker.cpp  note_tracker.h  pitch_detector.h  spice_detector.cpp  spice_detector.h  yin.cpp  yin.h
android/app/src/main/java/com/grazitheman/mouth2midi/: AudioEngineNative.java  MainActivity.java  Mouth2MidiPlugin.java  SpiceEngine.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
docs/: ML-SPICE.md
native-android/: README.md
native-android/cpp/: CMakeLists.txt  audio_engine.h  native-lib.cpp  note_tracker.h
native-android/java/com/grazitheman/mouth2midi/: AudioEngineNative.java
src/: main.ts  mouth2midi.ts  mouth2midi.web.ts  roll.ts  smf.ts  style.css
